Added design for body and header

--- a/src/containers/Header/style.scss
+++ b/src/containers/Header/style.scss
@@ -1,3 +1,12 @@
 .menu {
   width: 100%;
+  margin: 2rem 0 4rem;
+  a {
+    display: inline-block;
+    padding: 1rem;
+    background-color: #424242;
+    border-radius: 0.5rem;
+    margin-right: 1rem;
+    text-decoration: none;
+  }
 }
