--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html * {
   font-family: "Poppins", sans-serif;
+  color: #fff;
 }
 h1,
 h2 {
@@ -27,4 +28,7 @@ h2 {
 p {
   font-size: 1rem;
   margin-bottom: 1rem;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 300;
+  line-height: 1.5;
 }
