Added results to fixtures and style for this component

--- a/src/components/Fixtures/style.scss
+++ b/src/components/Fixtures/style.scss
@@ -18,4 +18,18 @@
       }
     }
   }
+  * {
+    color: #212121;
+  }
+}
+.sec--fixtures {
+  > div {
+    flex: 1 1 50%;
+    &:first-child {
+      padding-right: 1rem;
+    }
+    &:last-child {
+      padding-left: 1rem;
+    }
+  }
 }
