Added style for teams component and single team

--- a/src/components/ListTeams/style.scss
+++ b/src/components/ListTeams/style.scss
@@ -1,12 +1,15 @@
 .sec--teams {
+  ol {
+    margin-top: 4rem;
+  }
   li {
     background-color: #eee;
     flex: 0 0 calc(20% - 1rem);
-    margin: 0 1.25rem 1rem 0;
+    margin: 0 1.25rem 2rem 0;
     padding: 1rem;
     border-radius: 0.5rem;
     &:nth-child(5n) {
-      margin: 0 0 1rem 0;
+      margin: 0 0 2rem 0;
     }
   }
   h2,
@@ -22,5 +25,8 @@
     display: block;
     text-align: center;
     margin-top: 1rem;
+    color: #212121;
+    font-weight: bold;
+    text-transform: uppercase;
   }
 }
