--- a/src/containers/Team/style.scss
+++ b/src/containers/Team/style.scss
@@ -3,4 +3,13 @@
     max-width: 4rem;
     object-fit: contain;
   }
+  table {
+    th,
+    td {
+      text-align: center;
+      &:nth-child(1) {
+        text-align: left;
+      }
+    }
+  }
 }
