--- a/src/components/Standings/style.scss
+++ b/src/components/Standings/style.scss
@@ -1,1 +1,11 @@
-
+.sec--standings {
+  table {
+    th,
+    td {
+      text-align: center;
+      &:nth-child(1) {
+        text-align: left;
+      }
+    }
+  }
+}
