Added format for date and added style for same width team name

--- a/src/components/Fixtures/style.scss
+++ b/src/components/Fixtures/style.scss
@@ -16,6 +16,10 @@
           display: block;
         }
       }
+      &:nth-child(2) {
+        width: 100%;
+        max-width: 260px;
+      }
     }
   }
   * {
