--- a/src/components/Fixtures/style.scss
+++ b/src/components/Fixtures/style.scss
@@ -20,6 +20,9 @@
         width: 100%;
         max-width: 260px;
       }
+      &:nth-child(3) span {
+        text-align: center;
+      }
     }
   }
   * {
@@ -34,6 +37,22 @@
     }
     &:last-child {
       padding-left: 1rem;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .sec--fixtures {
+    flex-wrap: wrap;
+    > div {
+      flex: 1 1 100%;
+      padding: 0;
+      &:first-child {
+        padding-right: 0;
+      }
+      &:last-child {
+        margin-top: 2rem;
+        padding-left: 0;
+      }
     }
   }
 }
