--- a/src/components/ListTeams/style.scss
+++ b/src/components/ListTeams/style.scss
@@ -30,3 +30,18 @@
     text-transform: uppercase;
   }
 }
+@media (max-width: 768px) {
+  .sec--teams li {
+    background-color: #eee;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: calc(50% - 1rem);
+    margin: 0 2rem 2rem 0;
+    &:nth-child(5n) {
+      margin: 0 2rem 2rem 0;
+    }
+    &:nth-child(2n) {
+      margin: 0 0 2rem 0;
+    }
+  }
+}
